--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,15 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-
 	<artifactId>Dev-Helper</artifactId>
 	<version>1.0.0_SNAPSHOT</version>
 	<name>Dev-Helper</name>
 
 
 	<properties>
-	    <maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
+		  <maven.deploy.skip>true</maven.deploy.skip>
 	</properties>
 
 	<dependencies>
@@ -24,12 +24,12 @@
 		<developerConnection>scm:git:git@github.com:BraintagsGmbH/Dev-Helper.git</developerConnection>
 		<url>git@github.com:BraintagsGmbH/Dev-Helper.git</url>
 	</scm>
-	
+
 	<url>https://github.com/remi128/Dev-Helper</url>
 	<description>tools for dev</description>
 	<groupId>de.braintags</groupId>
 	<packaging>pom</packaging>
-	
+
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -42,17 +42,41 @@
 					</configuration>
 				</plugin>
 			</plugins>
-	</pluginManagement>	
-	<plugins>
-	      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
+		</pluginManagement>
+		<plugins>
+      <plugin>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.7</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+            <skip>${maven.deploy.skip}</skip>
         </configuration>
+        <executions>
+          <execution>
+            <id>default-deploy</id>
+            <phase>deploy</phase>
+            <goals>
+              <goal>deploy</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
-	</plugins>
+		
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
-	
+
+	<modules>
+		<module>../BtBase</module>
+		<module>../BtVertxBase</module>
+		<module>../vertx-util</module>
+		<module>../vertx-key-generator</module>
+		<module>../vertx-pojo-mapper</module>
+	</modules>
 </project>
